@@ -763,17 +763,38 @@ object *object_create_arch(archetype *at) {
 int is_type_valid(uint8_t type) {
     if (type >= OBJECT_TYPE_MAX)
         return 0;
-
-    if (type == 11 || type == 12)
-        return 0;
-    if (type == 19 || type == 25 || type == 35 || type == 38 || type == 44 || type == 47)
-        return 0;
-    if (type == 61 || type == 63 || type == 76 || type == 78 || type == 81)
-        return 0;
-    if (type == 81 || type == 84 || type == 86 || type == 88 || type == 89)
-        return 0;
-    if (type == 96 || type == 97 || type == 107 || type == 108 || type == 110)
-        return 0;
+    /*
+     * There's no reason to not use a switch statement here.
+     * We don't do anything special, so why take time reloading to registers?
+     *
+     * Just skip doing the ranges, since those might actually be better in their
+     * current form.
+     */
+    switch (type){
+	case 11:
+	case 12:
+	case 19:
+	case 25:
+	case 35:
+	case 38:
+	case 44:
+	case 47:
+	case 61:
+	case 63:
+	case 76:
+	case 78:
+	case 81:
+	case 84:
+	case 86:
+	case 88:
+	case 89:
+	case 96:
+	case 97:
+	case 107:
+	case 108:
+	case 110:
+	    return 0;
+    }
     if (type >= 117 && type <= 120)
         return 0;
     if (type >= 125 && type <= 129)
